supports boxed and unboxed primitive types

--- a/bundler/build.gradle
+++ b/bundler/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     }
 
     compile deps.supportFragment
+    compile deps.parceler
     compile project(':bundler-annotations')
 }
 
