--- a/bundler-compiler/build.gradle
+++ b/bundler-compiler/build.gradle
@@ -1,6 +1,9 @@
 apply plugin: 'java'
 apply plugin: 'com.novoda.bintray-release'
 
+sourceCompatibility = config.javaVersion
+targetCompatibility = config.javaVersion
+
 def logger = new com.android.build.gradle.internal.LoggerWrapper(project.logger)
 def sdkHandler = new com.android.build.gradle.internal.SdkHandler(project, logger)
 for (File file : sdkHandler.sdkLoader.repositories) {
@@ -9,19 +12,16 @@ for (File file : sdkHandler.sdkLoader.repositories) {
     }
 }
 
-sourceCompatibility = config.javaVersion
-targetCompatibility = config.javaVersion
-
 dependencies {
-    testCompile deps.junit
-
-    compileOnly files(org.gradle.internal.jvm.Jvm.current().getToolsJar())
-    compileOnly deps.autoService
-
-    compile deps.supportFragment
-    compile deps.autoCommon
-    compile deps.javapoet
     compile project(':bundler-annotations')
+    compile deps.javapoet
+    compile deps.autoCommon
+
+    compileOnly deps.supportFragment
+    compileOnly deps.autoService
+    compileOnly files(org.gradle.internal.jvm.Jvm.current().getToolsJar())
+
+    testCompile deps.junit
 }
 
 publish {
