--- a/build.gradle
+++ b/build.gradle
@@ -33,9 +33,10 @@ ext.deps = [
         // junit
         junit             : 'junit:junit:4.12',
         // google
+        truth             : 'com.google.truth:truth:0.31',
+        compileTesting    : 'com.google.testing.compile:compile-testing:0.9',
         autoService       : 'com.google.auto.service:auto-service:1.0-rc3',
         autoCommon        : 'com.google.auto:auto-common:0.8',
-        compileTesting    : 'com.google.testing.compile:compile-testing:0.9',
         // android
         supportAnnotations: 'com.android.support:support-annotations:25.3.1',
         supportFragment   : 'com.android.support:support-fragment:25.3.1',
