--- a/bundler-annotations/build.gradle
+++ b/bundler-annotations/build.gradle
@@ -1,14 +1,15 @@
 apply plugin: 'java'
 apply plugin: 'com.novoda.bintray-release'
+apply from: 'https://raw.githubusercontent.com/HendraAnggrian/hendraanggrian.github.io/master/bintray.gradle'
 
-sourceCompatibility = config.javaVersion
-targetCompatibility = config.javaVersion
+sourceCompatibility = versions.java
+targetCompatibility = versions.java
 
 publish {
     userOrg = bintray.user
     groupId = bintray.group
-    artifactId = bintray.artifact.annotations
-    publishVersion = bintray.version
-    desc = bintray.desc
-    website = bintray.website
+    artifactId = bintray.artifact.bundler.id + '-annotations'
+    publishVersion = versions.release
+    desc = bintray.artifact.bundler.desc
+    website = bintray.artifact.bundler.website
 }
