--- a/example/build.gradle
+++ b/example/build.gradle
@@ -1,14 +1,17 @@
 apply plugin: 'com.android.application'
-apply plugin: 'me.tatarka.retrolambda'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 
 buildscript {
+    ext.kotlin = '1.1.2-5'
     ext.butterknife = '8.6.0'
     ext.parceler = '1.1.6'
+    ext.reveallayout = '0.4.0'
     repositories {
         mavenCentral()
     }
     dependencies {
-        classpath 'me.tatarka:gradle-retrolambda:3.6.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin"
     }
 }
 
@@ -16,7 +19,7 @@ android {
     compileSdkVersion versions.sdk.target
     buildToolsVersion versions.buildTools
     defaultConfig {
-        minSdkVersion 12
+        minSdkVersion 15
         targetSdkVersion versions.sdk.target
         applicationId "com.example.bundlerexample"
         versionCode 1
@@ -31,25 +34,33 @@ android {
     }
 }
 
+repositories {
+    maven { url 'https://jitpack.io' }
+}
+
 dependencies {
-    compile "com.android.support:appcompat-v7:$versions.support"
-    compile "com.android.support:design:$versions.support"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin"
+
+    compile "com.android.support:appcompat-v7:$versions.android.support"
+    compile "com.android.support:cardview-v7:$versions.android.support"
+    compile "com.android.support:design:$versions.android.support"
+    androidTestCompile("com.android.support.test:runner:$versions.android.runner") {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    }
+    androidTestCompile("com.android.support.test.espresso:espresso-core:$versions.android.espresso") {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    }
+
+    compile "com.hendraanggrian:reveallayout:$reveallayout"
 
     compile project(':bundler')
-    annotationProcessor project(':bundler-compiler')
+    kapt project(':bundler-compiler')
 
     compile "com.jakewharton:butterknife:$butterknife"
-    annotationProcessor "com.jakewharton:butterknife-compiler:$butterknife"
+    kapt "com.jakewharton:butterknife-compiler:$butterknife"
 
     compile "org.parceler:parceler-api:$parceler"
-    annotationProcessor "org.parceler:parceler:$parceler"
-
-    androidTestCompile("com.android.support.test:runner:$versions.runner") {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    }
-    androidTestCompile("com.android.support.test.espresso:espresso-core:$versions.espresso") {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    }
+    kapt "org.parceler:parceler:$parceler"
 
     testCompile "junit:junit:$versions.junit"
 }
