--- a/example/src/main/AndroidManifest.xml
+++ b/example/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.bundlerexample">
+    package="com.example.bundlerexample"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:name=".App"
@@ -11,15 +11,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".Example1Activity"/>
-        <activity android:name=".Example2Activity"/>
+        <activity
+            android:name=".ExampleActivity"
+            android:exported="true"/>
+        <activity
+            android:name=".Example1Activity"/>
+        <activity
+            android:name=".Example2Activity"/>
     </application>
-
 </manifest>
