--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,8 @@ allprojects {
             ],
             junit     : '4.12',
 
-            release   : '0.4.0'
+            // release
+            release   : '0.5.0'
     ]
     repositories {
         jcenter()
