--- a/example/src/main/AndroidManifest.xml
+++ b/example/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.App">
+
         <activity
             android:name=".MainActivity">
             <intent-filter>
@@ -19,6 +20,10 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity
+            android:name=".NextActivity"
+            android:theme="@style/Theme.Next"/>
+
         <activity
             android:name=".ExampleActivity"
             android:exported="true"/>
