--- a/example/build.gradle
+++ b/example/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 
 buildscript {
-    ext.kotlin = '1.1.2-5'
+    ext.kotlin = '1.1.3'
     ext.butterknife = '8.6.0'
     ext.parceler = '1.1.6'
     ext.reveallayout = '0.4.0'
@@ -24,10 +24,19 @@ android {
         applicationId "com.example.bundlerexample"
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
+    }
+    sourceSets {
+        main.manifest.srcFile 'AndroidManifest.xml'
+        main.java.srcDirs 'src'
+        main.res.srcDirs 'res', 'res-public'
+        main.resources.srcDir 'src'
     }
     buildTypes {
         debug {
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        release {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -40,17 +49,9 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin"
-
     compile "com.android.support:appcompat-v7:$versions.android.support"
     compile "com.android.support:cardview-v7:$versions.android.support"
     compile "com.android.support:design:$versions.android.support"
-    androidTestCompile("com.android.support.test:runner:$versions.android.runner") {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    }
-    androidTestCompile("com.android.support.test.espresso:espresso-core:$versions.android.espresso") {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    }
-
     compile "com.hendraanggrian:reveallayout:$reveallayout"
 
     compile project(':bundler')
@@ -61,6 +62,4 @@ dependencies {
 
     compile "org.parceler:parceler-api:$parceler"
     kapt "org.parceler:parceler:$parceler"
-
-    testCompile "junit:junit:$versions.junit"
 }
