--- a/bundler-annotations/build.gradle
+++ b/bundler-annotations/build.gradle
@@ -1,15 +1,19 @@
 apply plugin: 'java'
+apply plugin: 'kotlin'
 apply plugin: 'com.novoda.bintray-release'
-apply from: 'https://raw.githubusercontent.com/HendraAnggrian/hendraanggrian.github.io/master/bintray.gradle'
 
-sourceCompatibility = versions.sdk.java
-targetCompatibility = versions.sdk.java
+sourceCompatibility = JavaVersion.VERSION_1_7
+targetCompatibility = JavaVersion.VERSION_1_7
+
+dependencies {
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin"
+}
 
 publish {
-    userOrg = bintray.user
-    groupId = bintray.group
-    artifactId = bintray.artifact.bundler.id + '-annotations'
-    publishVersion = versions.release
-    desc = bintray.artifact.bundler.desc
-    website = bintray.artifact.bundler.website
+    userOrg bintray_user
+    groupId bintray_group
+    artifactId bintray_artifact + '-annotations'
+    publishVersion bintray_release
+    desc bintray_desc
+    website bintray_web
 }
