--- a/bundler-compiler/build.gradle
+++ b/bundler-compiler/build.gradle
@@ -1,38 +1,26 @@
-import com.android.build.gradle.internal.LoggerWrapper
-import com.android.build.gradle.internal.SdkHandler
-
 apply plugin: 'java'
+apply plugin: 'kotlin'
 apply plugin: 'com.novoda.bintray-release'
-apply from: 'https://raw.githubusercontent.com/HendraAnggrian/hendraanggrian.github.io/master/bintray.gradle'
 
-sourceCompatibility = versions.sdk.java
-targetCompatibility = versions.sdk.java
-
-for (File file : new SdkHandler(project, new LoggerWrapper(project.logger)).sdkLoader.repositories) {
-    repositories.maven {
-        url = file.toURI()
-    }
-}
+sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
 
 dependencies {
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin"
     compile project(':bundler-annotations')
-    compile "com.squareup:javapoet:$versions.javapoet"
+    compile "com.google.auto:auto-common:$google_autocommon"
+    compile "com.squareup:javapoet:$javapoet"
 
-    // android
-    compileOnly "com.android.support:support-annotations:$versions.android.support"
+    compileOnly "com.android.support:support-annotations:$support"
 
-    // google
-    compile "com.google.auto:auto-common:$versions.google.auto.common"
-    compileOnly "com.google.auto.service:auto-service:$versions.google.auto.service"
-
-    testCompile "junit:junit:$versions.junit"
+    testCompile "junit:junit:$junit"
 }
 
 publish {
-    userOrg = bintray.user
-    groupId = bintray.group
-    artifactId = bintray.artifact.bundler.id + '-compiler'
-    publishVersion = versions.release
-    desc = bintray.artifact.bundler.desc
-    website = bintray.artifact.bundler.website
+    userOrg bintray_user
+    groupId bintray_group
+    artifactId bintray_artifact + '-compiler'
+    publishVersion bintray_release
+    desc bintray_desc
+    website bintray_web
 }
