--- a/bundler/build.gradle
+++ b/bundler/build.gradle
@@ -5,11 +5,11 @@ apply plugin: 'com.novoda.bintray-release'
 apply from: 'https://raw.githubusercontent.com/HendraAnggrian/hendraanggrian.github.io/master/bintray.gradle'
 
 android {
-    compileSdkVersion versions.sdk.target
-    buildToolsVersion versions.buildTools
+    compileSdkVersion sdk_target.toInteger()
+    buildToolsVersion build_tools
     defaultConfig {
-        minSdkVersion versions.sdk.min
-        targetSdkVersion versions.sdk.target
+        minSdkVersion sdk_min.toInteger()
+        targetSdkVersion sdk_target.toInteger()
         consumerProguardFiles 'proguard-rules.pro'
         testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
     }
@@ -20,34 +20,25 @@ dependencies {
     testCompile project(':bundler-compiler')
 
     // android
-    compile "com.android.support:support-fragment:$versions.android.support"
-    androidTestCompile("com.android.support.test:runner:$versions.android.runner") {
+    compile "com.android.support:support-fragment:$support"
+    androidTestCompile("com.android.support.test:runner:$runner") {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
-    androidTestCompile("com.android.support.test.espresso:espresso-core:$versions.android.espresso") {
+    androidTestCompile("com.android.support.test.espresso:espresso-core:$espresso") {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
 
     // google
-    androidTestCompile "com.google.truth:truth:$versions.google.test.truth"
-    testCompile "com.google.truth:truth:$versions.google.test.truth"
-    testCompile "com.google.testing.compile:compile-testing:$versions.google.test.compile"
+    androidTestCompile "com.google.truth:truth:$google_truth"
+    testCompile "com.google.truth:truth:$google_truth"
+    testCompile "com.google.testing.compile:compile-testing:$google_compile"
     testCompile files(getRuntimeJar())
     testCompile files(Jvm.current().getToolsJar())
 
-    testCompile "junit:junit:$versions.junit"
+    testCompile "junit:junit:$junit"
 }
 
-publish {
-    userOrg = bintray.user
-    groupId = bintray.group
-    artifactId = bintray.artifact.bundler.id
-    publishVersion = versions.release
-    desc = bintray.artifact.bundler.desc
-    website = bintray.artifact.bundler.website
-}
-
-static def getRuntimeJar() {
+def getRuntimeJar() {
     try {
         final File javaBase = new File(System.getProperty("java.home")).getCanonicalFile();
         File runtimeJar = new File(javaBase, "lib/rt.jar");
@@ -58,4 +49,13 @@ static def getRuntimeJar() {
     } catch (IOException e) {
         throw new RuntimeException(e);
     }
+}
+
+publish {
+    userOrg bintray_user
+    groupId bintray_group
+    artifactId bintray_artifact
+    publishVersion bintray_release
+    desc bintray_desc
+    website bintray_web
 }
