--- a/example/build.gradle
+++ b/example/build.gradle
@@ -1,39 +1,29 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
-buildscript {
-    ext.kotlin = '1.1.3'
-    ext.butterknife = '8.6.0'
-    ext.parceler = '1.1.6'
-    ext.reveallayout = '0.4.0'
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin"
-    }
-}
-
 android {
-    compileSdkVersion versions.sdk.target
-    buildToolsVersion versions.buildTools
+    compileSdkVersion sdk_target.toInteger()
+    buildToolsVersion build_tools
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion versions.sdk.target
-        applicationId "com.example.bundlerexample"
+        targetSdkVersion sdk_target.toInteger()
+        applicationId 'com.example.bundler'
         versionCode 1
-        versionName "1.0"
+        versionName '1.0'
     }
     sourceSets {
-        main.manifest.srcFile 'AndroidManifest.xml'
-        main.java.srcDirs 'src'
-        main.res.srcDirs 'res', 'res-public'
-        main.resources.srcDir 'src'
+        main {
+            manifest.srcFile 'AndroidManifest.xml'
+            java.srcDirs 'src'
+            res.srcDirs 'res', 'res-public'
+            resources.srcDir 'src'
+        }
     }
     buildTypes {
         debug {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         release {
@@ -48,18 +38,18 @@ repositories {
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin"
-    compile "com.android.support:appcompat-v7:$versions.android.support"
-    compile "com.android.support:cardview-v7:$versions.android.support"
-    compile "com.android.support:design:$versions.android.support"
-    compile "com.hendraanggrian:reveallayout:$reveallayout"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin"
+    implementation "com.android.support:appcompat-v7:$support"
+    implementation "com.android.support:cardview-v7:$support"
+    implementation "com.android.support:design:$support"
+    implementation "com.hendraanggrian:reveallayout:$reveallayout"
 
-    compile project(':bundler')
+    implementation project(':bundler')
     kapt project(':bundler-compiler')
 
-    compile "com.jakewharton:butterknife:$butterknife"
+    implementation "com.jakewharton:butterknife:$butterknife"
     kapt "com.jakewharton:butterknife-compiler:$butterknife"
 
-    compile "org.parceler:parceler-api:$parceler"
+    implementation "org.parceler:parceler-api:$parceler"
     kapt "org.parceler:parceler:$parceler"
 }
