--- a/gradle.properties
+++ b/gradle.properties
@@ -11,10 +11,11 @@ sdk_min=14
 sdk_target=27
 build_tools=26.0.2
 # dependencies
-kotlin=1.1.51
+kotlin=1.1.60
 support=27.0.1
 javapoet=1.9.0
 google_autocommon=0.8
+google_guava=23.4
 google_truth=0.36
 google_compile=0.12
 runner=0.5
