--- a/bundler-compiler/build.gradle
+++ b/bundler-compiler/build.gradle
@@ -1,19 +1,24 @@
+import org.gradle.internal.jvm.Jvm
+
 apply plugin: 'java'
 apply plugin: 'kotlin'
 apply plugin: 'com.novoda.bintray-release'
 
-sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_1_8
+sourceCompatibility = JavaVersion.VERSION_1_7
+targetCompatibility = JavaVersion.VERSION_1_7
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin"
     compile project(':bundler-annotations')
     compile "com.google.auto:auto-common:$google_autocommon"
-    compile "com.squareup:javapoet:$javapoet"
     compile "com.google.guava:guava:$google_guava-jre"
-    compileOnly "com.android.support:support-annotations:$support"
+    compile "com.squareup:javapoet:$javapoet"
 
-    testCompile "junit:junit:$junit"
+    compileOnly "com.android.support:support-annotations:$support"
+    compileOnly files(Jvm.current().getToolsJar())
+
+    testImplementation "junit:junit:$junit"
+    testImplementation "com.google.truth:truth:$google_truth"
 }
 
 publish {
