--- a/gradle.properties
+++ b/gradle.properties
@@ -10,6 +10,7 @@ bintray_web=https://github.com/hendraanggrian/bundler
 sdk_min=14
 sdk_target=27
 build_tools=26.0.2
+android_runtime=4.1.1.4
 # dependencies
 kotlin=1.1.60
 support=27.0.1
