--- a/bundler-annotations/build.gradle
+++ b/bundler-annotations/build.gradle
@@ -1,8 +1,12 @@
-apply plugin: 'java'
+apply plugin: 'java-library'
 apply plugin: 'com.novoda.bintray-release'
 
 sourceCompatibility = JavaVersion.VERSION_1_7
 targetCompatibility = JavaVersion.VERSION_1_7
+
+dependencies {
+    api "com.android.support:support-annotations:$support"
+}
 
 publish {
     userOrg bintray_user
