--- a/bundler-compiler/build.gradle
+++ b/bundler-compiler/build.gradle
@@ -1,6 +1,6 @@
 import org.gradle.internal.jvm.Jvm
 
-apply plugin: 'java'
+apply plugin: 'java-library'
 apply plugin: 'kotlin'
 apply plugin: 'com.novoda.bintray-release'
 
@@ -8,13 +8,12 @@ sourceCompatibility = JavaVersion.VERSION_1_7
 targetCompatibility = JavaVersion.VERSION_1_7
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin"
-    compile project(':bundler-annotations')
-    compile "com.google.auto:auto-common:$google_autocommon"
-    compile "com.google.guava:guava:$google_guava-jre"
-    compile "com.squareup:javapoet:$javapoet"
-
-    compileOnly "com.android.support:support-annotations:$support"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin"
+    implementation project(':bundler-annotations')
+    implementation "com.google.auto:auto-common:$google_autocommon"
+    implementation "com.google.guava:guava:$google_guava-jre"
+    api "com.squareup:javapoet:$javapoet"
+    compileOnly "com.google.android:android:$android_runtime"
     compileOnly files(Jvm.current().getToolsJar())
 
     testImplementation "junit:junit:$junit"
