--- a/gradle.properties
+++ b/gradle.properties
@@ -1,23 +1,17 @@
+# Project-wide Gradle settings.
+
+# IDE (e.g. Android Studio) users:
+# Gradle settings configured through the IDE *will override*
+# any settings specified in this file.
+
+# For more details on how to configure your build environment visit
+# http://www.gradle.org/docs/current/userguide/build_environment.html
+
+# Specifies the JVM arguments used for the daemon process.
+# The setting is particularly useful for tweaking memory settings.
 org.gradle.jvmargs=-Xmx1536m
-# bintray
-bintray_user=hendraanggrian
-bintray_group=com.hendraanggrian
-bintray_artifact=bundler
-bintray_release=0.8
-bintray_desc=Android extra field binder with annotation processor
-bintray_web=https://github.com/hendraanggrian/bundler
-# android
-sdk_min=14
-sdk_target=27
-build_tools=26.0.2
-# dependencies
-kotlin=1.1.60
-support=27.0.1
-javapoet=1.9.0
-google_autocommon=0.8
-google_guava=23.4
-google_truth=0.36
-google_compile=0.12
-runner=0.5
-espresso=2.2.2
-junit=4.12
+
+# When configured, Gradle will run in incubating parallel mode.
+# This option should only be used with decoupled projects. More details, visit
+# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
+# org.gradle.parallel=true
