--- a/.travis.yml
+++ b/.travis.yml
@@ -1,35 +1,32 @@
+os: linux
 language: android
-dist: trusty
-jdk: oraclejdk11
+jdk: openjdk11
+
+env:
+  global:
+    - TARGET_SDK=32
+    - BUILD_TOOLS=33.0.0
+    - ANDROID_HOME=~/android-sdk
 
 android:
   components:
     - tools
     - platform-tools
-    - build-tools-31.0.0
-    - android-30
-    - android-22
-    - extra-google-google_play_services
-    - extra-google-m2repository
-    - extra-android-m2repository
-    - sys-img-armeabi-v7a-android-22
-  licenses:
-    - 'android-sdk-preview-license-.+'
-    - 'android-sdk-license-.+'
-    - 'google-gdk-license-.+'
 
 before_install:
-  - mkdir "$ANDROID_HOME/licenses" || true
-  - echo "24333f8a63b6825ea9c5514f83c2829b004d1fee" > "$ANDROID_HOME/licenses/android-sdk-license"
-
-before_script:
-  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a -c 100M
-  - emulator -avd test -no-audio -no-window &
-  - android-wait-for-emulator
-  - adb shell input keyevent 82 &
+  - wget "https://dl.google.com/android/repository/commandlinetools-linux-7302050_latest.zip" -O "commandlinetools.zip"
+  - unzip "commandlinetools.zip" -d "$ANDROID_HOME"/
+  - yes | "$ANDROID_HOME"/cmdline-tools/bin/sdkmanager "platforms;android-$TARGET_SDK" --sdk_root="$ANDROID_HOME"
+  - yes | "$ANDROID_HOME"/cmdline-tools/bin/sdkmanager "build-tools;$BUILD_TOOLS" --sdk_root="$ANDROID_HOME"
 
 script:
-  - ./gradlew connectedCheck --info
+  - ./gradlew check --info
+  - ./gradlew koverXmlReport
+
+after_success:
+  - curl -Os "https://uploader.codecov.io/latest/linux/codecov"
+  - chmod +x codecov
+  - ./codecov
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
