--- a/.editorconfig
+++ b/.editorconfig
@@ -17,3 +17,7 @@ max_line_length = 100
 [*.{kt,kts}]
 indent_size = 4
 max_line_length = 100
+ktlint_standard_annotation = disabled # bind annotations requires JvmField
+ktlint_standard_spacing-between-declarations-with-annotations = disabled
+ktlint_standard_trailing-comma-on-call-site = disabled
+ktlint_standard_trailing-comma-on-declaration-site = disabled
